# Cipher

./: .gitignore  .jwt-secret  README.md  docker-compose.yml  package-lock.json
.github/workflows/: build-and-deploy-on-push.yml  build-on-pull-request.yml  main.yml
Chat.Service/: Chat.Service.sln
Chat.Service/Chat.API/: Chat.API.csproj  Dockerfile
Chat.Service/Chat.Api/: Chat.Api.csproj  DependencyInjection.cs  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
Chat.Service/Chat.Api/DelegatingHandlers/: JwtAuthorizationHandler.cs  LoggingHandler.cs
Chat.Service/Chat.Api/Endpoints/: ChatEndpoints.cs
Chat.Service/Chat.Api/Middleware/: ExceptionHandlingMiddleware.cs
Chat.Service/Chat.Api/Middlewares/: WebSocketMiddleware.cs
Chat.Service/Chat.Api/Properties/: launchSettings.json
Chat.Service/Chat.Api2/: Dockerfile
Chat.Service/Chat.Application/: Chat.Application.csproj  DependencyInjection.cs  GlobalUsings.cs
Chat.Service/Chat.Application.UnitTests/: Chat.Application.UnitTests.csproj  MessageTests.cs  Usings.cs
Chat.Service/Chat.Application.UnitTests/Messages/: CreateMessage.cs  MessageCreatedEventConsumerTests.cs
Chat.Service/Chat.Application/Abstractions/: IConnectionManager.cs  IPushNotificationService.cs
Chat.Service/Chat.Application/Behaviors/: ValidationBehavior.cs
Chat.Service/Chat.Application/CQRSMessaging/: ICommand.cs  ICommandHandler.cs  IQuery.cs  IQueryHandler.cs
Chat.Service/Chat.Application/Converters/: DateTimeOffsetConverter.cs  UppercaseGuidConverter.cs
Chat.Service/Chat.Application/Messaging/: ICommand.cs  ICommandHandler.cs  IQuery.cs
Chat.Service/Chat.Data/: Chat.Data.csproj
Chat.Service/Chat.Domain/: Chat.Domain.csproj
Chat.Service/Chat.Domain/Abstractions/: IGenericRepository.cs  IPagedList.cs  IUnitOfWork.cs
Chat.Service/Chat.Domain/Entities/: Message.cs
Chat.Service/Chat.Domain/Enums/: UserStatusEnum.cs
Chat.Service/Chat.Domain/Primitives/: Entity.cs
Chat.Service/Chat.Domain/Shared/: Error.cs  Result.cs  ResultT.cs
Chat.Service/Chat.Infrastructure/: Chat.Infrastructure.csproj  DependencyInjection.cs  GlobalUsings.cs
Chat.Service/Chat.Infrastructure/Data/: ApplicationDbContext.cs
Chat.Service/Chat.Infrastructure/Hubs/: ChatHub.cs  ConnectionManager.cs
Chat.Service/Chat.Infrastructure/MessageBroker/: EventBus.cs
Chat.Service/Chat.Infrastructure/Migrations/: 20241013170337_added-messages-table.Designer.cs  20241013170337_added-messages-table.cs  ApplicationDbContextModelSnapshot.cs
Chat.Service/Chat.Service/: Chat.Service.csproj  Dockerfile
Chat.Service/Chat.Services/: Chat.Services.csproj
Gateway.Api/: Dockerfile  Gateway.Api.csproj  Gateway.Api.sln  Program.cs  appsettings.Development.json
Identity.Service/: CMakeLists.txt  Dockerfile  config.json  main.cpp  monitor_logs.sh  start_service.sh
Identity.Service/src/: CMakeLists.txt  Handlers.cpp  Handlers.h  main.cpp
Identity.Service/src/Identity.Api/: ApiUtils.cpp  ApiUtils.h  AuthHandlers.cpp  CMakeLists.txt  ContactHandlers.cpp  Filters.h  Handlers.cpp  Handlers.h  UserHandlers.cpp
Identity.Service/src/Identity.Data/: CMakeLists.txt  ContactTable.cpp  ContactTable.h  DataUtils.cpp  DataUtils.h  User.cpp  User.h  UserTable.cpp  UserTable.h
Mobile.Client/: build.gradle.kts  settings.gradle.kts
Mobile.Client/app/: build.gradle.kts
Mobile.Client/gradle/: libs.versions.toml
Web.Client/: Dockerfile  angular.json  package-lock.json  package.json
Web.Client/src/: index.html  styles.css
test/: jwt_generator.py
(+354 files in other folders)
